<resources>
    <string name="app_name" translatable="false">ZenUA</string>

    <string name="settings">Settings</string>
    <!--<string name="action_refresh">Refresh</string>-->

    <string name="usd" translatable="false">USD</string>
    <string name="eur" translatable="false">EUR</string>
    <string name="rub" translatable="false">RUB</string>
    <string name="uah" translatable="false">UAH</string>

    <string name="finance_label" translatable="false">FІNANCE.UA</string>
    <string name="minfin_label" translatable="false">MIFIN.COM.UA</string>
    <string name="pref_private_label">PrivateBank</string>
    <string name="pref_minfin_label">Ministry of Finance</string>
    <string name="pref_currencylayer_label" translatable="false">CURRENCYLAYER.COM</string>
    <string name="pref_openexchangerates_label" translatable="false">OPENEXCHANGERATES.ORG</string>

    <string name="pref_source_label">Source</string>
    <string name="pref_source_key" translatable="false">source</string>
    <string name="pref_source_default" translatable="false">2</string>

    <string-array name="sources_entries">
        <item>@string/pref_private_label</item>
        <item>@string/pref_minfin_label</item>
        <item>@string/pref_currencylayer_label</item>
        <item>@string/pref_openexchangerates_label</item>
        <item>@string/finance_label</item>
    </string-array>
    <string-array name="sources_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="buy">Buy</string>
    <string name="sell">Sell</string>

    <string name="private_description_cash">Cash rate (in offices)</string>
    <string name="finance_description_average">Average rate of banks</string>

    <string name="sound_on">Sound On</string>
    <string name="sound_off">Sound Off</string>

    <string name="share">Share</string>

    <string name="sync_account_type" translatable="false">zenua.rstetsenko.edu</string>
    <string name="content_authority" translatable="false">edu.my.rstetsenko.zenua</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Rate Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="check_internet_connection">Check your Internet connection</string>
    <string name="title_activity_rate_progress">Rate Progress</string>
    <string name="chart_of">Charts of</string>
    <string name="amount">Amount</string>

</resources>
