<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    tools:background="@android:color/background_dark">

    <LinearLayout
        android:id="@+id/buy_sell_titles"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/description_top"
        android:paddingRight="@dimen/widget_titles_padding_right"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            style="@style/TextView.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/rate_title"/>

        <TextView
            style="@style/TextView.Description"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/buy"
            android:textSize="@dimen/widget_buy_sell_title" />

        <TextView
            style="@style/TextView.Description"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/sell"
            android:textSize="@dimen/widget_buy_sell_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/description_top">

        <TextView
            android:id="@+id/usd_rate"
            style="@style/TextView.RateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/widget_rate_numbers"
            tools:text="25.5"
            tools:visibility="gone" />

        <TextView
            style="@style/TextView.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usd"
            android:textSize="@dimen/rate_title" />

        <LinearLayout
            android:id="@+id/buy_sell_usd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/usd_rate_buy"
                style="@style/TextView.RateValue"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="@dimen/widget_rate_numbers"
                tools:text="24.3" />

            <TextView
                android:id="@+id/usd_rate_sell"
                style="@style/TextView.RateValue"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="@dimen/widget_rate_numbers"
                tools:text="26.7" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/description_top">

        <TextView
            android:id="@+id/eur_rate"
            style="@style/TextView.RateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/widget_rate_numbers"
            tools:text="35.5"
            tools:visibility="gone" />

        <TextView
            style="@style/TextView.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eur"
            android:textSize="@dimen/rate_title" />

        <LinearLayout
            android:id="@+id/buy_sell_eur"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/eur_rate_buy"
                style="@style/TextView.RateValue"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="@dimen/widget_rate_numbers"
                tools:text="24.3" />

            <TextView
                android:id="@+id/eur_rate_sell"
                style="@style/TextView.RateValue"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="@dimen/widget_rate_numbers"
                tools:text="26.7" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/description_top">

        <TextView
            android:id="@+id/rub_rate"
            style="@style/TextView.RateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/widget_rate_numbers"
            tools:text="0.5"
            tools:visibility="gone" />

        <TextView
            style="@style/TextView.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rub"
            android:textSize="@dimen/rate_title" />

        <LinearLayout
            android:id="@+id/buy_sell_rub"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/rub_rate_buy"
                style="@style/TextView.RateValue"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="@dimen/widget_rate_numbers"
                tools:text="24.3" />

            <TextView
                android:id="@+id/rub_rate_sell"
                style="@style/TextView.RateValue"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="@dimen/widget_rate_numbers"
                tools:text="26.7" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>